﻿[B]3.2.2| dualB | 2018-09-27[/B] 
- Requête SSL pour les playlist m3u8
- Uniformisation des fonctions log
- Correction pour les fanarts qui n'apparaissaient pas
- Nettoyage du code

[B]3.2.1| CB | 2018-09-18[/B] 
- Retrait du popup temporaire pour La Fabrique Culturelle
- Retrait de logs inutiles
- Nettoyage de lignes de code inutiles

[B]3.2.0| CB | 2018-01-10[/B] 
- Ajout de la section "Populaires"
- Popup temporaire pour La Fabrique Culturelle
- Correctif de la fonction getJsonBlock

[B]3.1.2| CB | 2017-12-29[/B] 
- Gestion d'erreur pour la fonction remove_any_html_tags()

[B]3.1.1 | CB | 2017-12-28[/B] 
- Obtention des liens plus stable

[B]3.1.0 | CB | 2017-02-06[/B] 
- Correction du décodage/encodage UTF-8 ( Oxalin)
- Obtention des liens hautes définitions (CB, PLafrance & andreq)

[B]3.0.2 | CB | 2016-09-20[/B] 
- Épurage de l'URL (correction mineures lors de caractères non reconnus)
- fanart.jpg
- Déplacement des fichiers dans resources/lib/

[B]3.0.1 | CB | 2016-09-14[/B] 
- Retrait de la dépendance à OrderedDict

[B]3.0.0 | CB | 2016-09-05[/B] 
- Refactorisation en profondeur de tout le code (séparation en module)
- Nouveau scraper du contenu utilisant l'API de TQ
- Refonte des algorithmes de regroupement automatique des vidéos en sous-catégorie
- Refonte du processus de lecture des flux vidéos
- Ajout de la gestion des liens déjà visionnés ou partiellement visionnés
- Abandon du paramètre de tri selon le web (ne s'applique plus)
- Abandon (temporaire?) de la section "Populaires" et "Récents"

[B]2.0.5 | SlySen | 2016-08-24[/B] 
- script.module.simplejson is not optional (Thx to bmaupin)
- Add context menu to get video informations
- Lexic fixes
- Settings dependencies

[B]2.0.4 | SlySen | 2016-06-12[/B] 
- Setting. Auto-delete Kodi .fi temp files
- Enable access to the addon settings from the main page
- Popup a warning dialog instead of an empty directory if no video

[B]2.0.3 | SlySen | 2016-06-06[/B] 